# chipz

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
core/: constants.hpp  host.cpp  host.hpp
core/chip-core/: chip_core.cpp  chip_core.hpp  core_state.hpp  cpu_info.hpp
core/chip-core/exec/: exec_manager.cpp  exec_manager.hpp
core/chip-core/exec/comp/: emitter.cpp  emitter.hpp  linear_scan_allocator.cpp  linear_scan_allocator.hpp
core/chip-core/exec/disassembler/: disassembler.cpp  disassembler.hpp  disassembly.cpp  disassembly.hpp
core/chip-core/exec/disassembler/instr/: instruction.cpp  instruction.hpp
core/chip-core/exec/ir/: hlir.cpp  hlir.hpp  register_allocator.cpp  register_allocator.hpp
core/chip-core/exec/ir/hlir/: instruction.cpp  instruction.hpp  register.hpp
core/cpu/: add.cpp  call.cpp  chip_core.cpp  chip_core.hpp  display.cpp  display.hpp  draw_sprite.cpp  group_8.cpp  group_f.cpp  jump.cpp  long_jump.cpp  register.cpp  register.hpp  set.cpp  set_i.cpp  skip_imm_eq.cpp  skip_imm_neq.cpp  skip_reg_eq.cpp  skip_reg_neq.cpp
core/jpu/: core.hpp  jpu_core.cpp  jpu_core.hpp  register.cpp  register.hpp
core/jpu/jit/: instruction_info.cpp  instruction_info.hpp  instruction_list.cpp  instruction_list.hpp  jit_block.cpp  jit_block.hpp  jit_manager.cpp  jit_manager.hpp  linear_register_allocator.cpp  linear_register_allocator.hpp
core/jpu/jit/ir/: ir_manager.cpp  ir_manager.hpp
core/util/: display.cpp  display.hpp  division.cpp  division.hpp  enum.hpp  memory_stream.cpp  memory_stream.hpp  register.hpp  static_stack.hpp  template.hpp  types.hpp
